--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        I am pursuing a Master's of Science in computer science at Rutgers University, New Brunswick, and will graduate in May 2023; my current GPA is 3.917/4. I have completed my Computer Engineering undergraduate degree from the University of Mumbai, India, with a GPA of 8.37/10. 
- I am a graduate research assistant at <a href="https://rucilab.rutgers.edu"><strong>RUCI</strong></a> Lab under professor Jim Samuel, working on the Digit Recognizer project.
- I am an optimistic and energetic individual with excellent communication skills and the ability to work well with teams at all functional levels.
+                        I am pursuing a Master's of Science in computer science at Rutgers University, New Brunswick, and will graduate in May 2023; my current GPA is 3.917/4. 
+                        I have completed my Computer Engineering undergraduate degree from the University of Mumbai, India, with a GPA of 8.37/10.
+                        I am a graduate research assistant at <a href="https://rucilab.rutgers.edu"><strong>RUCI</strong></a> Lab under professor Jim Samuel, working on the Digit Recognizer project. 
+                        I am an optimistic and energetic individual with excellent communication skills and the ability to work well with teams at all functional levels.
                     </p>
                     <div class="btn-con">
                         <a href="resume.pdf" class="main-btn">
@@ -99,7 +100,7 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">Languages</p>
+                            <p class="large-text">Other</p>
                              <p class="small-text">PHP <br /> MYSQL <br /> JAVA<br/>OpenCV<br />C<br/>Android<br /></p>
                         </div>
                     </div>
